--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"devDependencies": {
 		"@types/bun": "latest",
-		"prisma": "^6.15.0"
+		"prisma": "^6.16.2"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@apollo/server": "^5.0.0",
 		"@google/genai": "^1.16.0",
-		"@prisma/client": "^6.15.0",
+		"@prisma/client": "^6.16.2",
 		"@types/bcrypt": "^6.0.0",
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
@@ -21,6 +21,7 @@
 		"@types/jsonwebtoken": "^9.0.10",
 		"apollo-server-express": "^3.13.0",
 		"bcrypt": "^6.0.0",
+		"body-parser": "^2.2.0",
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"express-graphql": "^0.12.0",
